# facility-coverage-optimizer

./: .gitignore  01_extract.py  02_transform.py  02_transform_gurobi comparison.py  03_transform_zmb_15km.py  README.md  databricks.yml  osm_data_download.ipynb  pyproject.toml
extract/: 01a_download_worldpop.py  01b_download_wb.py  02_population.py  03_boundaries.py  04_facilities.py  config.py
frontend_mod/: app.py
shared/: __init__.py  core.py  env.py  settings.py
tests/: test_core.py  test_env.py
transform/: 01_prepare.py  02_coverage.py  03_optimize.py  04_lgu_metrics.py  04_visualize.py  config.py
